[tool.poetry]
name = "c:\\program1\\account-transactions"
version = "0.1.0"
description = ""
authors = ["MEDVEDIXD <i.have.nothing.against@gmail.com>"]
readme = "README.md"
packages = [{include = "c:\\"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
